--- a/BlackBee.Toolkit/BlackBee.Toolkit.Base/BlackBee.Toolkit.Base.csproj
+++ b/BlackBee.Toolkit/BlackBee.Toolkit.Base/BlackBee.Toolkit.Base.csproj
@@ -43,6 +43,7 @@
     <Compile Include="ObjectBase.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Store.cs" />
     <Compile Include="ViewModelBase.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
