--- a/BlackBee.Toolkit/WPF/BlackBee.Toolkit.Base/BlackBee.Toolkit.Base.WPF.csproj
+++ b/BlackBee.Toolkit/WPF/BlackBee.Toolkit.Base/BlackBee.Toolkit.Base.WPF.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helper\SugarExtensions.cs" />
     <Compile Include="ObjectBase.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
