--- a/scr/BlackBee.Toolkit/UWP/BlackBee.Toolkit.UWP/BlackBee.Toolkit.UWP.csproj
+++ b/scr/BlackBee.Toolkit/UWP/BlackBee.Toolkit.UWP/BlackBee.Toolkit.UWP.csproj
@@ -114,6 +114,9 @@
       <Version>6.0.8</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Base\" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
