--- a/scr/BlackBee.Toolkit/WPF/Toolkit/BlackBee.Toolkit.Base.WPF/BlackBee.Toolkit.Base.WPF.csproj
+++ b/scr/BlackBee.Toolkit/WPF/Toolkit/BlackBee.Toolkit.Base.WPF/BlackBee.Toolkit.Base.WPF.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{785333A0-ED8F-4099-BA5E-C045666F5EEC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BlackBee.Toolkit.Base.WPF</RootNamespace>
-    <AssemblyName>BlackBee.Toolkit.Base.WPF</AssemblyName>
+    <RootNamespace>BlackBee.Toolkit.Base</RootNamespace>
+    <AssemblyName>BlackBee.Toolkit.Base</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
