--- a/scr/BlackBee.Toolkit/UWP/BlackBee.Toolkit.UWP/BlackBee.Toolkit.UWP.csproj
+++ b/scr/BlackBee.Toolkit/UWP/BlackBee.Toolkit.UWP/BlackBee.Toolkit.UWP.csproj
@@ -106,6 +106,12 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\..\WPF\Toolkit\BlackBee.Toolkit.Base.WPF\ObjectBase.cs">
+      <Link>Base\ObjectBase.cs</Link>
+    </Compile>
+    <Compile Include="..\Toolkit\BlackBee.Toolkit.Base.UWP\Properties\Annotations.cs">
+      <Link>Properties\Annotations.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\BlackBee.Toolkit.UWP.rd.xml" />
   </ItemGroup>
@@ -114,9 +120,7 @@
       <Version>6.0.8</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Base\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
