--- a/scr/BlackBee.Toolkit/UWP/Toolkit.Tests/BlackBee.Toolkit.Base.UWP.Tests/BlackBee.Toolkit.Base.UWP.Tests.csproj
+++ b/scr/BlackBee.Toolkit/UWP/Toolkit.Tests/BlackBee.Toolkit.Base.UWP.Tests/BlackBee.Toolkit.Base.UWP.Tests.csproj
@@ -95,11 +95,13 @@
     <SDKReference Include="TestPlatform.Universal, Version=$(UnitTestPlatformVersion)" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\..\WPF\Toolkit.Tests\BlackBee.Toolkit.Base.WPF.Tests\ObjectBaseTests.cs">
+      <Link>ObjectBaseTests.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTestApp.xaml.cs">
       <DependentUpon>UnitTestApp.xaml</DependentUpon>
     </Compile>
-    <Compile Include="UnitTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="UnitTestApp.xaml">
