--- a/scr/BlackBee.Toolkit/NuGet/BlackBee.ToolKit.nuspec
+++ b/scr/BlackBee.Toolkit/NuGet/BlackBee.ToolKit.nuspec
@@ -3,8 +3,8 @@
   <metadata>
     <id>BlackBee.ToolKit</id>
     <version>1.0.0</version>
-    <authors>Dioni</authors>
-    <owners>Dioni</owners>
+    <authors>Denis Prokhorchik</authors>
+    <owners>Denis Prokhorchik</owners>
     <licenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</licenseUrl>
     <projectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</projectUrl>
     <iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>
@@ -18,7 +18,7 @@
     </dependencies>
   </metadata>
    <files>
-    <file src="..\BlackBee.Toolkit\WPF\BlackBee.Toolkit.WPF\bin\Debug\BlackBee.Toolkit.dll" target="lib\net6.1" />
-    <file src="..\BlackBee.Toolkit\UWP\BlackBee.Toolkit.UWP\bin\Debug\BlackBee.Toolkit.dll" target="lib\uap10.0" />
+    <file src="..\WPF\BlackBee.Toolkit.WPF\bin\Debug\BlackBee.Toolkit.dll" target="lib\net461" />
+    <file src="..\UWP\BlackBee.Toolkit.UWP\bin\Debug\BlackBee.Toolkit.dll" target="lib\uap10.0" />
   </files>
 </package>
