--- a/scr/BlackBee.Toolkit/WPF/Toolkit/BlackBee.Toolkit.Base.WPF/BlackBee.Toolkit.Base.WPF.csproj
+++ b/scr/BlackBee.Toolkit/WPF/Toolkit/BlackBee.Toolkit.Base.WPF/BlackBee.Toolkit.Base.WPF.csproj
@@ -40,9 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helper\SugarExtensions.cs" />
     <Compile Include="ObjectBase.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Store.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
