fixed nuget pack

--- a/scr/BlackBee.Toolkit/UWP/Toolkit/BlackBee.Toolkit.Commands.UWP/BlackBee.Toolkit.Commands.UWP.csproj
+++ b/scr/BlackBee.Toolkit/UWP/Toolkit/BlackBee.Toolkit.Commands.UWP/BlackBee.Toolkit.Commands.UWP.csproj
@@ -124,6 +124,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\BlackBee.Toolkit.Commands.UWP.rd.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
+      <Version>6.0.8</Version>
+    </PackageReference>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
